# webmath

./: LICENCE  README.md  requirements.txt  setup.cfg  setup.py  webmath.py
web_math/: webmath.py
