[metadata]
name = web_math
version = 1.0.1
auhtor = mcbabo
description = For online math api
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/mcbabo/webmath"
classifier = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.7
include_package_data = True